# bool2sparql

./: README.md  bool2sparql-exe  bool2sparql.cabal  stack.yaml
app/: Main.hs
src/Data/: Bool2sparql.hs
src/Data/Bool2sparql/: Parser.hs  Query.hs
test/: Spec.hs
